some updates to index.html

--- a/docroot/index.html
+++ b/docroot/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<html>
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,7 +11,7 @@
     <title>Ben's Website</title>
 </head>
 
-
+<html>
 <body>
 <div class="main">
 	<nav class="navbar navbar-expand-sm navbar-dark " style="background-color:#697184">
@@ -36,20 +35,36 @@
 			<div class="container-fluid">
 				<div class="row">
 					<div class="col-lg-3">
-	   					<img src="images/me_transparent.PNG" width="375px" height="450px">
+	   					<img src="images/me_transparent.PNG" width="375px" height="450px";>
 					</div>	
 					<div class="col-lg-2"></div>
 					<div class="col-lg-7 justify-content-center">
-						<h1><b>Benjamin Citren</b></h1>
-						<p class="lead"><b>Hello and welcome to my site! I created this to document some of the current as well as past technologies and projects
-						I have worked on.
-						</b></p>
-<br>
-					</div>
-				</div>
-			</div>
-    </div>
+						<h1><br><b>Benjamin Citren</b></h1><hr>
+					
+					<div class="test">
+						<pre>
+<b>
+ _________________________________________
+/ Hello and welcome to my site! I created \
+| this to document some of the current as |
+| well as past technologies and projects  |
+\ I have worked on.                       /
+ -----------------------------------------
+     \
+      \
+          oO)-.                       .-(Oo
+         /__  _\                     /_  __\
+         \  \(  |     ()~()         |  )/  /
+          \__|\ |    (-___-)        | /|__/
+          '  '--'    ==`-'==        '--'  '
+</pre></b>						
 
+					</div>
+			</div>
+<br>
+				</div>
+</div>   
+</div>
 <div class="main-body">	    
     <div class="card">
         <div class="card-header">
@@ -185,26 +200,21 @@
 </div>
 </div>
 
-<!-- Go Raptors///////////////////////////////////////////////////////////////////////// -->
 <div class="row justify-content-center" style="margin-top:10em;border-radius:10px">
 	<div class="card" style="border: 2px solid #FF8D3F;border-radius:10px">
 	        <img class="card-img" src="images/raps/rap_claw.PNG" alt="Raptors Image">
 	    	<div class="card-img-overlay">
-	        	<div class="card-text"> <h4 style="color:#FFF">GO RAPTORS!!!</h4>
+<!--	        	<div class="card-text"> <h4 style="color:#FFF">GO RAPTORS!!!</h4> -->
 			</div>
 	    	</div>
 	</div>
 </div>
-
-<?php include "home_tables.php"; ?>
-
+<div>
 </body>
-
 <footer class="page-footer font-small blue">
-  <div class="footer-copyright text-center py-3">© 2021 Copyright:
-    <a href="http://bencitren.com/">BenCitren.com</a>
-</div>
-</div>
+  	<div class="footer-copyright text-center py-3">© 2021 Copyright:
+    		<a href="http://bencitren.com/">BenCitren.com</a>
+	</div>
 </footer>
 </body>
 </html>
