--- a/docroot/index.html
+++ b/docroot/index.html
@@ -31,11 +31,11 @@
 		  </div>
 	</nav>
 
-	<div class="jumbotron jumbrotron-fluid" style="border-radius:0px;border-top:2px solid #FF8D3F;padding-bottom:5rem;">
+	<div class="jumbotron jumbrotron-fluid" style="border-radius:0px;border-top:2px solid #413F3D;padding-bottom:5rem;">
 			<div class="container-fluid">
 				<div class="row">
 					<div class="col-lg-3">
-	   					<img src="images/me_transparent.PNG" width="375px" height="450px";>
+	   					<img src="images/me_ish.jpg" width="325px" height="375px";>
 					</div>	
 					<div class="col-lg-2"></div>
 					<div class="col-lg-7 justify-content-center">
@@ -211,7 +211,7 @@
 </div>
 <div>
 </body>
-<footer class="page-footer font-small blue">
+<footer class="page-footer font-small blue" style="background:#697184;">
   	<div class="footer-copyright text-center py-3">© 2021 Copyright:
     		<a href="http://bencitren.com/">BenCitren.com</a>
 	</div>
